# aggregation-service

./: .bazelignore  .bazelrc  .gitallowed  .gitignore  .gitmessagetemplate  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  API.md  BUILD  CHANGELOG.md  COLLECTING.md  CONTRIBUTING.md  DEBUGGING.md  DEPENDENCIES.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bzlmod  maven_install.json  maven_install_bzlmod.json  perfgate_helper.sh  rebuild_pom.sh  supported_versions.json
build-scripts/: DEBIAN_CONTAINER_DIGEST
build-scripts/aws/: README.md  buildspec.yml  publish.sh  set_ami_to_public.sh
build-scripts/aws/build-container/: DEBIAN_CONTAINER_DIGEST  Dockerfile  buildspec.yml
build-scripts/aws/terraform/: .terraform.lock.hcl  codebuild.auto.tfvars_sample  codebuild.tf  codebuild_variables.tf  main.tf_sample
build-scripts/gcp/: README.md  cloudbuild.yaml
build-scripts/gcp/build-container/: Dockerfile  cloudbuild.yaml
build_defs/: container_dependencies.bzl  googleapis.patch  pbs_loadtest.bzl  release.bzl
build_defs/scp/: BUILD  coordinator.patch  dependency_update.patch  gcs_storage_client.patch  pin_pkr_docker.patch  scp-0.30.0.patch  scp-0.51.15.patch  shared-libraries-1.4.0.patch  shared_libraries_v1.2.0.patch  v1.0.0-1.patch  v1.0.patch
build_defs/shared_libraries/: BUILD  adtech_setup.patch  aws_ebs_vol_terminate.patch  client_config_fix.patch  coordinator_imdsv2.patch  dependency_update.patch  emulator_container.patch  golang.patch  key_cache_ttl.patch  pbs_client.patch  rules_boost_mirror.patch  rules_docker.patch  rules_pkg_build_fix.patch  tmp_build.patch  update_glibc_version.patch  upgrade_glibc.patch  v1.13-adtech-setup-premission.patch  v1.13-ebs_size_increase.patch  v1.19_amazonlinux_2_version.patch  v1.9_serverless_connector.patch  workspace.patch
build_defs/shared_libraries/internal/: BUILD  v1.13-khs_autoscale_config.patch
build_defs/worker/aws/: BUILD  aggregation_worker_ami.pkr.hcl  deploy.bzl
build_defs/worker/gcp/: BUILD  deploy.bzl
docs/: API.md  COLLECTING.md  DEBUGGING.md  api.md  aws-aggregation-service.md  batching-strategies.md  collecting.md  debugging.md  error-codes-and-mitigation.md  gcp-aggregation-service.md  general-notes.md  local-testing-tool.md  sizing-guidance.md  supported-api-types.md  telemetry.md
explainers/: encrypted_intermediates.md  requerying.md
javatests/testData/: BUILD
licenses/: BUILD
licenses/THIRD_PARTY_NOTICES/aws_asg_capacity_handler_lambda_release/: com.google.code.findbugs.jsr305_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_aws_api_gateway_frontend_handler_lambda_release/: io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_aws_change_handler_lambda_release/: io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE  zlib_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_aws_frontend_cleanup_handler_lambda_release/: io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_local_testing_tool/: com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  com.google.j2objc.j2objc-annotations_LICENSE  com.squareup.okhttp3.okhttp_LICENSE  javax.inject.javax.inject_LICENSE  org.jetbrains.kotlin.kotlin-stdlib-common_LICENSE  org.slf4j.slf4j-api_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_local_testing_tool_release/: com.google.android.annotations_LICENSE  com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_privacy_budget_unit_extraction_tool/: com.google.code.findbugs.jsr305_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_privacy_budget_unit_extraction_tool_release/: io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_terminated_instance_handler_lambda_release/: javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/aws_worker_mp_aws_prod/: com.google.android.annotations_LICENSE  com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE  org.slf4j.slf4j-api_LICENSE
licenses/THIRD_PARTY_NOTICES/gcp_frontend_service_http_cloud_function_release/: com.google.android.annotations_LICENSE  com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/gcp_local_testing_tool/: aopalliance.aopalliance_LICENSE  com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  javax.inject.javax.inject_LICENSE
licenses/THIRD_PARTY_NOTICES/gcp_local_testing_tool_release/: com.google.android.annotations_LICENSE  com.google.api.gax-grpc_LICENSE  com.google.api.gax-httpjson_LICENSE  com.google.api.gax_LICENSE  io.vavr.vavr-match_LICENSE  io.vavr.vavr_LICENSE  javax.inject.javax.inject_LICENSE
licenses/apache-2/Apache Commons Math/: LICENSE.txt
protocol/avro/: BUILD  debug_results.avsc  output_domain.avsc  reports.avsc  results.avsc
protocol/proto/: BUILD  encryption_key_config.proto
sampledata/: BUILD  aggregate_result.json  output_debug_reports.avro  output_domain.avro  output_reports.avro
simulation/proto/: BUILD  aggregate_service_key.proto  simulation_config.proto
terraform/: README.md
terraform/aws/: .gitignore  BUILD  build_defs.bzl  download-dependencies.sh  download_prebuilt_dependencies.sh  fetch_terraform.sh
terraform/gcp/: BUILD  download_prebuilt_dependencies.sh  fetch_terraform.sh
testing/build_defs/: avro.bzl
tools/copybara/: README.md  copy.bara.sky
tools/load_tests/: .gitignore  README.md  SPACE  template.yaml
worker/aws/: BUILD
worker/gcp/: BUILD
(+1179 files in other folders)
